# Project_Nards

./: .flake8  .gitignore  README.md  dodo.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: api.rst  architecture.rst  conf.py  developer_guide.rst  index.rst  workflow.rst
src/nardy/: __init__.py  __main__.py
src/nardy/app/: __init__.py  bootstrap.py  controller.py  presentation.py
src/nardy/domain/: engine.py  move_generator.py  rules_base.py  rules_long.py
src/nardy/i18n/: __init__.py  translator.py
src/nardy/i18n/locale/: messages.pot
src/nardy/i18n/locale/en/LC_MESSAGES/: nardy.mo  nardy.po
src/nardy/i18n/locale/ru/LC_MESSAGES/: nardy.mo  nardy.po
src/nardy/net/: __init__.py  protocol.py  socket_match.py
src/nardy/ui/: __init__.py  game_screen.py  main_menu.py
tests/: conftest.py  test_bootstrap.py  test_main_module.py
tests/app/: test_controller.py  test_presentation.py
tests/domain/: test_gameplay_rules.py  test_undo.py
tests/i18n/: test_translator.py
tests/net/: test_protocol.py  test_socket_match.py
