[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nardy"
version = "0.1.0"
description = "Extensible backgammon project skeleton for the semester team project."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Nardy Team" },
]
keywords = ["backgammon", "tkinter", "education", "game"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Board Games",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "Babel>=2.15",
  "build>=1.2",
  "doit>=0.36",
  "flake8>=7.0",
  "pydocstyle>=6.3",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "Sphinx>=8.0",
]

[project.scripts]
nardy = "nardy.app.bootstrap:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nardy.i18n" = ["locale/**/*.po", "locale/**/*.mo"]

[tool.setuptools.exclude-package-data]
"nardy.i18n" = ["locale/messages.pot"]

[tool.pydocstyle]
convention = "pep257"
add-ignore = ["D203", "D213"]
match-dir = "(?!tests|docs|build|dist).*"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["nardy"]
omit = [
  "src/nardy/app/controller.py",
  "src/nardy/ui/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75

[tool.coverage.html]
directory = "htmlcov"
